# stock-optimizer

./: CLAUDE.md  Cargo.toml  README.md  check.sh  deploy.sh  dev.sh  index.html
pkg/: stock_optimizer.js  stock_optimizer_bg.wasm
src/: lib.rs  main.rs
