[package]
name = "stock_optimizer"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Performance", "Window"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# Nothing extra needed — std::time::Instant works natively

[[bin]]
name = "stock-optimizer"
path = "src/main.rs"

[profile.release]
opt-level = "s"
lto = true
